force-app/main/default/objects/EEO_Detail__c/EEO_Detail__c.object-meta.xml
<CustomObject>
    <label>EEO Detail</label>
    <nameField>
        <displayFormat>EEO-{0000000}</displayFormat>
        <label>EEO Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EEO Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>