force-app/main/default/objects/EEO_Detail__c/fields/Age_0__c.field-meta.xml
<CustomField>
    <fullName>Age_0__c</fullName>
    <formula>YEAR(TODAY()) - YEAR( $User.DateOfBirth__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>