force-app/main/default/objects/EEO_Detail__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <picklist>
        <picklistValues>
            <fullName>16</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>17</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>18</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>19</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>20</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>21</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>22</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>23</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>24</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>25</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>26</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>27</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>28</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>29</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>30</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>31</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>32</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>33</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>34</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>35</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>36</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>37</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>38</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>39</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>40</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>41</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>42</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>43</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>44</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>45</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>