force-app/main/default/objects/EEO_Detail__c/fields/Basis_of_Complaint_Includes__c.field-meta.xml
<CustomField>
    <fullName>Basis_of_Complaint_Includes__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Race&quot; ), &quot;Race&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basis of Complaint Includes?</label>
    <type>Text</type>
</CustomField>