force-app/main/default/objects/EEO_Detail__c/fields/Category_Of_Favorably_Treated__c.field-meta.xml
<CustomField>
    <fullName>Category_Of_Favorably_Treated__c</fullName>
    <label>Category Of Favorably Treated</label>
    <picklist>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>