force-app/main/default/objects/EEO_Detail__c/fields/CCHHSEmployeeFiledCharges__c.field-meta.xml
<CustomField>
    <fullName>CCHHSEmployeeFiledCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCHHS Employee Filed Charges</label>
    <type>Checkbox</type>
</CustomField>