force-app/main/default/objects/EEO_Detail__c/fields/ChargeResolved__c.field-meta.xml
<CustomField>
    <fullName>ChargeResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Resolved?</label>
    <type>Checkbox</type>
</CustomField>