force-app/main/default/objects/EEO_Detail__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <label>Charges</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>