force-app/main/default/objects/EEO_Detail__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <picklist>
        <picklistValues>
            <fullName>Citizen of the United States</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Non-Citizen National of the United States</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Lawful Permanent Resident</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Alien authorized to work</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>B1</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>B2</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Green Card</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>H1B</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>H2B</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>L1</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TN</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Undocumented</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>