force-app/main/default/objects/EEO_Detail__c/fields/CitizenshipIfOther__c.field-meta.xml
<CustomField>
    <fullName>CitizenshipIfOther__c</fullName>
    <label>Citizenship If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>