force-app/main/default/objects/EEO_Detail__c/fields/Claim_Is_Against_CCHHS__c.field-meta.xml
<CustomField>
    <fullName>Claim_Is_Against_CCHHS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Is Against CCHHS</label>
    <type>Checkbox</type>
</CustomField>