force-app/main/default/objects/EEO_Detail__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <picklist>
        <picklistValues>
            <fullName>Red</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Orange</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Yellow</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Green</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Blue</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Indigo</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Violet</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>