force-app/main/default/objects/EEO_Detail__c/fields/Color_NEW__c.field-meta.xml
<CustomField>
    <fullName>Color_NEW__c</fullName>
    <label>Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>