force-app/main/default/objects/EEO_Detail__c/fields/ColorOfOther__c.field-meta.xml
<CustomField>
    <fullName>ColorOfOther__c</fullName>
    <label>Color Of Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>