force-app/main/default/objects/EEO_Detail__c/fields/ComplainantIsOnAdministrativeLeave__c.field-meta.xml
<CustomField>
    <fullName>ComplainantIsOnAdministrativeLeave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complainant Is On Administrative Leave</label>
    <type>Checkbox</type>
</CustomField>