force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Age__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Age__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Age&quot; ), &quot;Age&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Age</label>
    <type>Text</type>
</CustomField>