force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Citizenship__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Citizenship&quot; ), &quot;Citizenship&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Citizenship</label>
    <type>Text</type>
</CustomField>