force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Color__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Color__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Color&quot; ), &quot;Color&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Color</label>
    <type>Text</type>
</CustomField>