force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Disability__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Disability__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Disability&quot; ), &quot;Disability&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Disability</label>
    <type>Text</type>
</CustomField>