force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Equal_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Equal_Compensation__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Equal Compensation&quot; ), &quot;Equal Compensation&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Equal Compensation</label>
    <type>Text</type>
</CustomField>