force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_GeneticInformation__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_GeneticInformation__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Genetic Information&quot; ), &quot;Genetic Information&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Genetic Information</label>
    <type>Text</type>
</CustomField>