force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Harassment__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Harassment__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Harassment&quot; ), &quot;Harassment&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Harassment</label>
    <type>Text</type>
</CustomField>