force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Marital_Status__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Marital Status&quot; ), &quot;Marital Status&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Marital Status</label>
    <type>Text</type>
</CustomField>