force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Military__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Military__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Military / VeteranStatus&quot; ), &quot;Military / VeteranStatus&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Military/VeteranStatu</label>
    <type>Text</type>
</CustomField>