force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_National_Origin__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_National_Origin__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;National Origin&quot; ), &quot;National Origin&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes National Origin</label>
    <type>Text</type>
</CustomField>