force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Order_of_Protection__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Order_of_Protection__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Order of Protection Status&quot; ), &quot;Order of Protection Status&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Order of Protection</label>
    <type>Text</type>
</CustomField>