force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Religion__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Religion__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Religion&quot; ), &quot;Religion&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Religion</label>
    <type>Text</type>
</CustomField>