force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Retaliation__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Retaliation__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Retaliation&quot; ), &quot;Retaliation&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Retaliation</label>
    <type>Text</type>
</CustomField>