force-app/main/default/objects/EEO_Detail__c/fields/Complaint_includes_Sex__c.field-meta.xml
<CustomField>
    <fullName>Complaint_includes_Sex__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Sex (including pregnancy and related conditions)&quot; ), &quot;Sex (including pregnancy and related conditions)&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Sex</label>
    <type>Text</type>
</CustomField>