force-app/main/default/objects/EEO_Detail__c/fields/Complaint_Includes_Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Includes_Sexual_Orientation__c</fullName>
    <formula>IF ( INCLUDES ( Basis_Of_Complaint__c , &quot;Sexual Orientation&quot; ), &quot;Sexual Orientation&quot;, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Includes Sexual Orientation</label>
    <type>Text</type>
</CustomField>