force-app/main/default/objects/EEO_Detail__c/fields/Cross_Filed__c.field-meta.xml
<CustomField>
    <fullName>Cross_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross-Filed</label>
    <type>Checkbox</type>
</CustomField>