force-app/main/default/objects/EEO_Detail__c/fields/DateChargeResolved__c.field-meta.xml
<CustomField>
    <fullName>DateChargeResolved__c</fullName>
    <label>Date Charge Resolved</label>
    <type>Date</type>
</CustomField>