force-app/main/default/objects/EEO_Detail__c/fields/DateChargeUnresolved__c.field-meta.xml
<CustomField>
    <fullName>DateChargeUnresolved__c</fullName>
    <label>Date Charge Unresolved</label>
    <type>Date</type>
</CustomField>