force-app/main/default/objects/EEO_Detail__c/fields/DateFiledAtExternalAgency__c.field-meta.xml
<CustomField>
    <fullName>DateFiledAtExternalAgency__c</fullName>
    <label>Date Filed At External Agency</label>
    <type>Date</type>
</CustomField>