force-app/main/default/objects/EEO_Detail__c/fields/DateInvestigationsConcluded__c.field-meta.xml
<CustomField>
    <fullName>DateInvestigationsConcluded__c</fullName>
    <label>Date Investigation(s) Concluded</label>
    <type>Date</type>
</CustomField>