force-app/main/default/objects/EEO_Detail__c/fields/DateInvestigationsStarted__c.field-meta.xml
<CustomField>
    <fullName>DateInvestigationsStarted__c</fullName>
    <label>Date Investigation(s) Started</label>
    <type>Date</type>
</CustomField>