force-app/main/default/objects/EEO_Detail__c/fields/DateOfIncident__c.field-meta.xml
<CustomField>
    <fullName>DateOfIncident__c</fullName>
    <label>Date Of Incident</label>
    <type>Date</type>
</CustomField>