force-app/main/default/objects/EEO_Detail__c/fields/DateofOutcome__c.field-meta.xml
<CustomField>
    <fullName>DateofOutcome__c</fullName>
    <label>Date of Outcome</label>
    <type>Date</type>
</CustomField>