force-app/main/default/objects/EEO_Detail__c/fields/DateOutcomeMeetingHeld__c.field-meta.xml
<CustomField>
    <fullName>DateOutcomeMeetingHeld__c</fullName>
    <label>Date Outcome Meeting Held</label>
    <type>Date</type>
</CustomField>