force-app/main/default/objects/EEO_Detail__c/fields/DateResMemoSentToManagement__c.field-meta.xml
<CustomField>
    <fullName>DateResMemoSentToManagement__c</fullName>
    <label>Date Res Memo Sent To Management</label>
    <type>Date</type>
</CustomField>