force-app/main/default/objects/EEO_Detail__c/fields/DateVerifiedResponseDue__c.field-meta.xml
<CustomField>
    <fullName>DateVerifiedResponseDue__c</fullName>
    <label>Date Verified Response Due</label>
    <type>Date</type>
</CustomField>