force-app/main/default/objects/EEO_Detail__c/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <label>Disability</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>