force-app/main/default/objects/EEO_Detail__c/fields/Disability_NEW__c.field-meta.xml
<CustomField>
    <fullName>Disability_NEW__c</fullName>
    <label>Disability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>