force-app/main/default/objects/EEO_Detail__c/fields/DisabilityIfOther__c.field-meta.xml
<CustomField>
    <fullName>DisabilityIfOther__c</fullName>
    <label>Disability If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>