force-app/main/default/objects/EEO_Detail__c/fields/EEOOfficeWasNotified__c.field-meta.xml
<CustomField>
    <fullName>EEOOfficeWasNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EEO Office Was Notified</label>
    <type>Checkbox</type>
</CustomField>