force-app/main/default/objects/EEO_Detail__c/fields/Equal_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Equal_Compensation__c</fullName>
    <label>Equal Compensation</label>
    <picklist>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>