force-app/main/default/objects/EEO_Detail__c/fields/EqualCompensationIfOther__c.field-meta.xml
<CustomField>
    <fullName>EqualCompensationIfOther__c</fullName>
    <label>Equal Compensation If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>