force-app/main/default/objects/EEO_Detail__c/fields/Executive_Leader_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Executive_Leader_Explanation__c</fullName>
    <label>Executive Leader Explanation</label>
    <picklist>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>