force-app/main/default/objects/EEO_Detail__c/fields/ExecutiveLeaderApproved__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveLeaderApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Leader Approved</label>
    <type>Checkbox</type>
</CustomField>