force-app/main/default/objects/EEO_Detail__c/fields/ExecutiveLeaderNotified__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveLeaderNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Leader Notified</label>
    <type>Checkbox</type>
</CustomField>