force-app/main/default/objects/EEO_Detail__c/fields/Explanation_Why_Case_Is_Not_Valid__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Why_Case_Is_Not_Valid__c</fullName>
    <label>Explanation Why Case Is Not Valid</label>
    <length>200</length>
    <type>Text</type>
</CustomField>