force-app/main/default/objects/EEO_Detail__c/fields/Finding_Field__c.field-meta.xml
<CustomField>
    <fullName>Finding_Field__c</fullName>
    <label>Finding Field</label>
    <picklist>
        <picklistValues>
            <fullName>Substantianted</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Unsubstantiated</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>