force-app/main/default/objects/EEO_Detail__c/fields/Genetic_Information__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Information__c</fullName>
    <label>Genetic Information</label>
    <picklist>
        <picklistValues>
            <fullName>Progeria</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Uner Tan Syndrome</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Hypertrichosis</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Epidermodysplasia Verruciformis</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>SCID</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Lesch–Nyhan Syndrome</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Ectrodactyly</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Proteus Syndrome</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Trimethylaminuria</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Marfan Syndrome</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>