force-app/main/default/objects/EEO_Detail__c/fields/GeneticInformationIfOther__c.field-meta.xml
<CustomField>
    <fullName>GeneticInformationIfOther__c</fullName>
    <label>Genetic Information If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>