force-app/main/default/objects/EEO_Detail__c/fields/HarassmentIfOther__c.field-meta.xml
<CustomField>
    <fullName>HarassmentIfOther__c</fullName>
    <label>Harassment If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>