force-app/main/default/objects/EEO_Detail__c/fields/IncidentDiscussedWithPartiesInvolved__c.field-meta.xml
<CustomField>
    <fullName>IncidentDiscussedWithPartiesInvolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incident Discussed With Parties Involved</label>
    <type>Checkbox</type>
</CustomField>