force-app/main/default/objects/EEO_Detail__c/fields/IncidentWasReportedTo__c.field-meta.xml
<CustomField>
    <fullName>IncidentWasReportedTo__c</fullName>
    <label>Incident Was Reported To</label>
    <length>120</length>
    <type>Text</type>
</CustomField>