force-app/main/default/objects/EEO_Detail__c/fields/IsComplaintonAdministrativeLeave__c.field-meta.xml
<CustomField>
    <fullName>IsComplaintonAdministrativeLeave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Complaint on Administrative Leave?</label>
    <type>Checkbox</type>
</CustomField>