force-app/main/default/objects/EEO_Detail__c/fields/IsNotSubstantiated__c.field-meta.xml
<CustomField>
    <fullName>IsNotSubstantiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubstantiated</label>
    <type>Checkbox</type>
</CustomField>