force-app/main/default/objects/EEO_Detail__c/fields/IsSubstantiated__c.field-meta.xml
<CustomField>
    <fullName>IsSubstantiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Substantiated</label>
    <type>Checkbox</type>
</CustomField>