force-app/main/default/objects/EEO_Detail__c/fields/JobTitleOfFavorablyTreated__c.field-meta.xml
<CustomField>
    <fullName>JobTitleOfFavorablyTreated__c</fullName>
    <label>Job Title Of Favorably Treated</label>
    <length>128</length>
    <type>Text</type>
</CustomField>