force-app/main/default/objects/EEO_Detail__c/fields/Kind_of_EEO_Being_Reported__c.field-meta.xml
<CustomField>
    <fullName>Kind_of_EEO_Being_Reported__c</fullName>
    <label>Kind of EEO Being Reported</label>
    <picklist>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>