force-app/main/default/objects/EEO_Detail__c/fields/Leadership_Job_Code_ID_Description__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Job_Code_ID_Description__c</fullName>
    <label>Leadership Job Code ID &amp; Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>