force-app/main/default/objects/EEO_Detail__c/fields/LeadershipEmail__c.field-meta.xml
<CustomField>
    <fullName>LeadershipEmail__c</fullName>
    <label>Leadership Email</label>
    <type>Email</type>
</CustomField>