force-app/main/default/objects/EEO_Detail__c/fields/LeadershipPhone__c.field-meta.xml
<CustomField>
    <fullName>LeadershipPhone__c</fullName>
    <label>Leadership Phone</label>
    <type>Phone</type>
</CustomField>