force-app/main/default/objects/EEO_Detail__c/fields/Main_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Main_Complaint__c</fullName>
    <description>Select the main complaint from employee&apos;s Basis of Complaint</description>
    <label>Main Complaint</label>
    <picklist>
        <picklistValues>
            <fullName>Race</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Color</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Religion</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Sex (including pregnancy and related conditions)</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Sexual Orientation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>National Origin</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Citizenship</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Age</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Disability</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Genetic Information</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Military / VeteranStatus</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Marital Status</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Order of Protection Status</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Equal Compensation</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Harassment</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Sexual Harassment</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Retaliation</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>MultiselectPicklist</type>
</CustomField>