force-app/main/default/objects/EEO_Detail__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <picklist>
        <picklistValues>
            <fullName>Married</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Single</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Separated</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Divorce</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Widowed</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>