force-app/main/default/objects/EEO_Detail__c/fields/MaritalStatusIfOther__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatusIfOther__c</fullName>
    <label>Marital Status If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>