force-app/main/default/objects/EEO_Detail__c/fields/Military_Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Veteran_Status__c</fullName>
    <label>Military/Veteran Status</label>
    <picklist>
        <picklistValues>
            <fullName>Active Duty</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Veteran</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Current Reserve Member</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Unfavorable Military Discharge</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>TBD</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>