force-app/main/default/objects/EEO_Detail__c/fields/MilitaryVeteranStatusIfOther__c.field-meta.xml
<CustomField>
    <fullName>MilitaryVeteranStatusIfOther__c</fullName>
    <label>Military/Veteran Status If Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>