force-app/main/default/objects/EEO_Detail__c/fields/NameOfFavorablyTreated__c.field-meta.xml
<CustomField>
    <fullName>NameOfFavorablyTreated__c</fullName>
    <label>Name Of Favorably Treated</label>
    <length>120</length>
    <type>Text</type>
</CustomField>